@startuml@startuml
!include Style.puml

title Architecture - Class Diagram

' === Core Controller ===
class InternityManager LOGIC_COLOR

' === Logic Layer ===
class CommandParser LOGIC_COLOR
class CommandFactory LOGIC_COLOR
abstract class Command LOGIC_COLOR
class AddCommand LOGIC_COLOR
class DeleteCommand LOGIC_COLOR
class FindCommand LOGIC_COLOR
class UpdateCommand LOGIC_COLOR
class ListCommand LOGIC_COLOR
class UsernameCommand LOGIC_COLOR
class DashboardCommand LOGIC_COLOR
class ExitCommand LOGIC_COLOR
class ArgumentParser LOGIC_COLOR

' === Model Layer ===
class InternshipList MODEL_COLOR
class Internship MODEL_COLOR
class Storage STORAGE_COLOR
class Date MODEL_COLOR
enum Status MODEL_COLOR

' === UI Layer ===
class Ui UI_COLOR
class DashboardUi UI_COLOR

' === Utilities ===
class DateFormatter

' === Relationships ===
InternityManager --> CommandParser
InternityManager --> InternshipList
InternityManager --> Storage
InternityManager --> Ui

CommandParser --> CommandFactory
CommandFactory --> ArgumentParser
CommandFactory --> Command
ArgumentParser --> Command

' Command hierarchy
Command <|-- AddCommand
Command <|-- DeleteCommand
Command <|-- FindCommand
Command <|-- UpdateCommand
Command <|-- ListCommand
Command <|-- UsernameCommand
Command <|-- DashboardCommand
Command <|-- ExitCommand

' All commands interact with InternshipList
AddCommand --> InternshipList
DeleteCommand --> InternshipList
FindCommand --> InternshipList
UpdateCommand --> InternshipList
ListCommand --> InternshipList
UsernameCommand --> InternshipList
DashboardCommand --> InternshipList
ExitCommand --> InternshipList

' Dashboard uses DashboardUi
DashboardCommand --> DashboardUi

' InternshipList relationships
InternshipList --> Storage
InternshipList --> Internship
Internship --> Date
Internship --> Status
DashboardUi --> InternshipList

' ArgumentParser uses DateFormatter
ArgumentParser --> DateFormatter

@enduml
